fix eddit todo value to be left in input field

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                 <div class="edit-form">
                                     <label class="label">
                                         <h6 class="h6">Todo:</h6>
-                                        <input type="text" id="edditTodo" placeholder="ändra din todo..." />
+                                        <input type="text" id="edditTodo" />
                                     </label>
                                     <div class="start-end">
                                         <label class="label1">
